# cbba-sga

./: .flake8  .gitignore  README.md  pyproject.toml
examples/: baseline.py  opt_test.py
src/cbba_sga/: agent.py  class_worker.py  config.py  pool.py  sga.py  task.py  types.py
